2006-10-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Fixed typo.  How did this ever come through the regression test?
  - Fixed constness problem in esc_raw() for old libpq versions
2006-09-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, configitems, src/util.cxx, include/pqxx/util.hxx,
 test/test000.cxx:
  - Support "long long" and "unsigned long long" types
  - Redid from_string implementations as template
2006-09-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h:
  - Include pqxx/result, not old pqxx/result.h
 test/test083.cxx
  - Fixed problem found by Visual Studio 8, thanks Xiaofeng Zhao
2006-09-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085.cxx:
  - Fixed problem found by Visual Studio 8, thanks Xiaofeng Zhao
2006-09-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Fixed bug in removing trigger, thanks Xiaofeng Zhao and Bart Samwel
2006-09-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx:
  - Convenience typedef abscursor for most common type of absolute_cursor
 test/test043.cxx:
  - Migrated from old Cursor to new absolute_cursor
 win32/INSTALL.txt
  - Need to run VCVARS32.BAT before building postgres as well as libpqxx
  - Thanks Bart Samwel and Jonathan Blitz
2006-09-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/all.h, include/pqxx/connection.h,
 include/pqxx/connection_base.h, include/pqxx/connectionitf.h,
 include/pqxx/dbtransaction.h, include/pqxx/except.h,
 include/pqxx/isolation.h, include/pqxx/largeobject.h,
 include/pqxx/tablereader.h, include/pqxx/tablestream.h,
 include/pqxx/tablewriter.h, include/pqxx/transaction.h,
 include/pqxx/transaction_base.h, include/pqxx/transactionitf.h,
 include/pqxx/transactor.h, include/pqxx/trigger.h:
  - Retired old 1.x-style ".h" headers
 include/pqxx/result.hxx, include/pqxx/tablereader.hxx,
 include/pqxx/tablestream.hxx, include/pqxx/tablewriter.hxx: